--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Openator - Помогает искать туры на сайтах туроператоров</title>
     <meta name="keywords" content="Openator, поиск туров на сайтах туроператоров">
     <meta name="description" content="Openator заполняет поисковую форму на сайте туроператра чтобы Вам не приходилось вносить одни и те же данные несколько раз">
-    <meta property="og:image" content="https://____.com/images/promo.jpg"/>
-    <meta name="twitter:image:src" content="https://____.com/images/promo.jpg"/>
-    <meta itemprop="image" content="https://____.com/images/promo.jpg"/>
+    <meta property="og:image" content="http://openator.github.io/images/promo.jpg"/>
+    <meta name="twitter:image:src" content="http://openator.github.io/images/promo.jpg"/>
+    <meta itemprop="image" content="http://openator.github.io/images/promo.jpg"/>
 
     <link href="style.css" rel="stylesheet">
 
