--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
                 <blockquote class="mes">
                   <p>Openator заполняет поисковую форму на сайте туроператра чтобы Вам не приходилось вносить одни и те же данные несколько раз</p>
                 </blockquote>
+                <p class="shere-p">Покажите Openator коллегам:</p>
+                <div class="pluso" data-background="transparent" data-options="medium,round,line,horizontal,nocounter,theme=06" data-services="vkontakte,odnoklassniki,facebook,twitter,google,moimir,myspace,linkedin,livejournal,email"></div>
               </div> 
             </div>
           </div>
@@ -183,5 +185,24 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="scripts.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76431827-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <script type="text/javascript">(function() {
+      if (window.pluso)if (typeof window.pluso.start == "function") return;
+      if (window.ifpluso==undefined) { window.ifpluso = 1;
+        var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
+        s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
+        s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
+        var h=d[g]('body')[0];
+        h.appendChild(s);
+      }})();</script>
+    
   </body> 
 </html>
