--- a/index.html
+++ b/index.html
@@ -175,6 +175,19 @@
                 <div class="pluso" data-background="transparent" data-options="medium,round,line,horizontal,nocounter,theme=06" data-services="vkontakte,odnoklassniki,facebook,twitter,google,moimir,myspace,linkedin,livejournal,email"></div>
               </div> 
             </div>
+            <div class="footer">
+              <ul>
+                <li>
+                  <a href="#reformal" data-toggle="modal" data-target="#reformal">Сообщить об ошибке</a>
+                </li>
+                <!--<li>
+                  <a href="">Поддержать проект</a>
+                </li>
+                <li>
+                    <a href="">Туроператорам</a>
+                  </li>-->
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -187,6 +200,22 @@
         </div>
       </div>
     </div>
+    <div class="modal fade" id="reformal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Закрыть"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Есть идея или нашли ошибку? Сообщите нам!</h4>
+          </div>
+          <div class="modal-body">
+            <iframe style="width: 100%; height: 100%; border: 0;" frameborder="0" src="http://reformal.ru/widget/973501"></iframe>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
+          </div>
+        </div>
+      </div>
+</div>    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="scripts.min.js"></script>
     <script>
