--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </div>
 </div>    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="scripts.min.js"></script>
+    <script src="scripts.min.js?v=10"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
